fixed footer css, insert footer on the fly through global.js

--- a/anonymous.html
+++ b/anonymous.html
@@ -23,7 +23,7 @@
 
 	</header>
 
-	<div class="page-content">
+	<div id="page-content">
 		<h1 id="page-title">👨🏻‍💻 👩🏼‍💻</h1>
 		<!-- <h1 id = "page-title">👨🏻‍💻 ask me anything 👩🏼‍💻</h1> -->
 		<div class="message-board">
@@ -46,19 +46,7 @@
 				</button>
 			</div> -->
 		</div>
-		<div id="page-footer-navigator">
-			<ul>
-				<li class="social-media-link" id="github-link">
-					<a href="https://www.github.com/LuisLondono"></a>
-				</li>
-				<li class="social-media-link" id="facebook-link">
-					<a href="https://www.facebook.com/luislondonoramos"></a>
-				</li>
-				<li class="social-media-link" id="linkedin-link">
-					<a href="https://www.linkedin.com/in/luislondonoramos"></a>
-				</li>
-			</ul>
-		</div>
+
 
 
 
