--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div> -->
     </header>
 
-    <div class="page-content">
+    <div id="page-content">
 
         <h1>About Me</h1>
         <div id="landing-page-container">
@@ -130,28 +130,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-        <div id="page-footer-navigator">
-            <ul>
-                <li class="social-media-link" id="github-link">
-                    <a href="https://www.github.com/LuisLondono"></a>
-                </li>
-                <li class="social-media-link" id="facebook-link">
-                    <a href="https://www.facebook.com/luislondonoramos"></a>
-                </li>
-                <li class="social-media-link" id="linkedin-link">
-                    <a href="https://www.linkedin.com/in/luislondonoramos"></a>
-                </li>
-            </ul>
-        </div>
     </div>
 
 </body>
