--- a/hood.html
+++ b/hood.html
@@ -21,6 +21,7 @@
     </header>
 
     <div id="page-content">
+        <h1 id="page-title">Portfolio Manager</h1>
         <div id="pull">
 
         </div>
