--- a/investments.html
+++ b/investments.html
@@ -57,7 +57,7 @@
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-firestore.js"></script>
     <script type="text/javascript" src="./js/global.js"></script>
-    <script type="text/javascript" src="./js/hood.js"></script>
+    <script type="text/javascript" src="./js/investments.js"></script>
 </body>
 
 </html>
