--- a/investments.html
+++ b/investments.html
@@ -6,7 +6,7 @@
     <title>Luis Londono</title>
 
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/portfolioManager.css">
+    <link rel="stylesheet" href="css/investments.css">
 
 
     <link rel="shortcut icon" type="image/x-icon" href="images/cornellicon.ico">
