--- a/investments.html
+++ b/investments.html
@@ -21,13 +21,21 @@
     <div id="page-content">
         <h1 id="page-title">PM</h1>
         <!-- <h3 id="client-name-title">client name</h3> -->
-        <div id="portfolio-calculator">
-            <h3>Value:</h3>
-            <input id="symbol-field" name="symbol" type="text" placeholder="symbol" value="cron">
-            </input>
-            <button onclick="handleGetQuote()"> Get Quote</button>
-            <p id="quote-response">None</p>
-            <p id="portfolio-value"></p>
+        <div id="stock-search-container">
+            <div class="stock-search-bar-container" id="stock-search-bar-container-no-results">
+                <div id="search-icon-container">
+                    <svg width="18px" height="18px" viewBox="0 0 18 18" version="1.1">
+                        <g id="search-icon" transform="translate(-11.000000, -11.000000)">
+                            <path
+                                d="M23.0733726,24.4447312 C21.8075531,25.4199921 20.2215106,26 18.5,26 C14.3578644,26 11,22.6421356 11,18.5 C11,14.3578644 14.3578644,11 18.5,11 C22.6421356,11 26,14.3578644 26,18.5 C26,20.2215106 25.4199921,21.8075531 24.4447312,23.0733726 L28.1425948,26.7712362 L26.7712362,28.1425948 L23.0733726,24.4447312 Z M18.5,24 C21.5375661,24 24,21.5375661 24,18.5 C24,15.4624339 21.5375661,13 18.5,13 C15.4624339,13 13,15.4624339 13,18.5 C13,21.5375661 15.4624339,24 18.5,24 Z"
+                                id="Combined-Shape"></path>
+                        </g>
+                    </svg>
+                </div>
+                <input id="stock-search-bar" type="text" class="textbox" placeholder="Search">
+            </div>
+            <div class="search-results-container" id="search-results-container-empty"></div>
+
         </div>
         <div id="portfolio-container">
             <div id="portfolio-list-container">
