--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <h3> Welcome!</h3>
                 <hr>
                 <p> My name is Luis and I'm a rising junior at Cornell University studying computer science. I am also
-                    persuing a minor in Operations Research and Business. </p>
+                    pursuing a minor in Operations Research and Business. </p>
 
                 <p> Aside from coursework I also stay active on campus in a variety of ways:
                 </p>
