--- a/investments.html
+++ b/investments.html
@@ -54,7 +54,7 @@
 
 
     </div>
-    <div id="add-stock-from-search-modal" class="modal">
+    <!-- <div id="add-stock-from-search-modal" class="modal">
         <div class="modal-container">
             <button class="close" onclick="closeModal()">&times;</button>
             <div class="modal-content-securities">
@@ -146,7 +146,7 @@
                 </Button>
             </div>
         </div>
-    </div>
+    </div> -->
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-firestore.js"></script>
