--- a/investments.html
+++ b/investments.html
@@ -21,7 +21,8 @@
 
     <div id="page-content">
         <div id="page-title">
-            <h1 id="page-title">Portfolio Manager</h1>
+            <!-- <h1 id="page-title">Portfolio Manager</h1> -->
+            <h1 id="page-title">PM</h1>
             <h4></h4>
         </div>
         <!-- <h3 id="client-name-title">client name</h3> -->
@@ -44,8 +45,6 @@
         <div id="portfolio-container">
             <div id="portfolio-list-container">
                 <h2>Portfolio</h2>
-                <!-- <div class="stock-container"> <div class="company-info"> <span> <h4 class="company-info-name">Apple Inc.</h4> <h4></h4><h4>&nbsp;$</h4><h4 class="company-info-ticker">AAPL</h4> </span> <h5 class="num-shares-label">1&nbsp;share</h5> </div> <div class="company-price-container"> <h4>Price</h4> </div> </div> -->
-
             </div>
             <div id="chart-container">
                 Chart container
@@ -54,104 +53,11 @@
 
 
     </div>
-    <!-- <div id="add-stock-from-search-modal" class="modal">
-        <div class="modal-container">
-            <button class="close" onclick="closeModal()">&times;</button>
-            <div class="modal-content-securities">
-                <div class="modal-content-security-info">
-                    <div class="modal-content-security-info-identifiers">
-                        <h2>'+companyName+'
-                            <h3>$'+ticker+'</h3>
-                        </h2>
-                    </div>
-                    <div class="modal-content-portfolio-editor-container">
-                        INSERTHERE
-                    </div>
-                </div>
-
-                <Button id="add-to-portfolio-button" onclick="handleAddSecurityToPortfolioFromModal()">
-                    Add
-                    <i class="material-icons right">send</i>
-                </Button>
-            </div>
-        </div>
-    </div>
-    <div id="add-stock-from-search-modal" class="modal">
-        <div class="modal-container">
-            <button class="close" onclick="closeModal()">&times;</button>
-            <div class="modal-content-securities">
-                <div class="modal-content-security-info">
-                    <div class="modal-content-security-info-identifiers">
-                        <h2>'+companyName+'
-                            <h3>$'+ticker+'</h3>
-                        </h2>
-                    </div>
-                    <div class="modal-content-portfolio-editor-container">
-                        <div class="modal-content-initial-trade-info-container">
-                            <div class="modal-content-trade-info-labels">
-                                <h3 class="modal-content-number-shares">Number of shares:</h3>
-                                <h3 class="modal-content-buy-price">Purchased at:</h3>
-                                <h3 class="modal-content-security-trading-price">Current Price: </h3>
-                            </div>
-                            <div class="modal-content-trade-info-inputs">
-                                <h3>&nbsp;&nbsp;&nbsp;<input type="text" value="'+numSharesInPortfolio+'"></h3>
-                                <h3>$&nbsp;<input type="text"></h3>
-                                <h3>$&nbsp;<span>10.40</span></h3>
-                            </div>
-                        </div>
-
-                        <div class="modal-content-edit-position-container">
-                            <div class="modal-content-edit-position-portfolio-details-container">
-                                <div class="modal-content-portfolio-info-labels">
-                                    <h3 class="modal-content-number-shares">Current Position:</h3>
-                                    <h3 class="modal-content-buy-price">Average Cost:</h3>
-                                    <h3 class="modal-content-security-trading-price">Total Return: </h3>
-                                </div>
-                                <div class="modal-content-portfolio-info-inputs">
-                                    <h3>&nbsp;'+numSharesInPortfolio+'></h3>
-                                    <h3>$&nbsp;'+avgPrice+'</h3>
-                                    <h3>$&nbsp;<span>'+totalReturn+'</span></h3>
-                                </div>
-
-                            </div>
-                            <div class="modal-content-edit-position-trade-container">
-                                <div class="modal-content-edit-position-trade-details-container">
-
-                                    <div class="modal-content-edit-position-trade-info-labels">
-                                        <h3 class="modal-content-number-shares">Number of shares:</h3>
-                                        <h3 class="modal-content-buy-price">Purchased at:</h3>
-                                        <h3 class="modal-content-security-trading-price">Current Price: </h3>
-                                    </div>
-                                    <div class="modal-content-trade-info-inputs">
-                                        <h3>&nbsp;&nbsp;&nbsp;<input type="text" value="'+numSharesInPortfolio+'"></h3>
-                                        <h3>$&nbsp;<input type="text"></h3>
-                                        <h3>$&nbsp;<span>10.40</span></h3>
-                                    </div>
-                                </div>
-
-                                <div class="buy-sell-switch-container">
-                                    <span class="slider-half">Bought</span>
-                                    <div class="buy-sell-switch-container-slider" id="bought-toggle"><button
-                                            onclick="handleBuySellSwitch()"></button></div>
-                                    <span class="slider-half">Sold</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <Button id="add-to-portfolio-button" onclick="handleAddSecurityToPortfolioFromModal()">
-                    Add
-                    <i class="material-icons right">send</i>
-                </Button>
-            </div>
-        </div>
-    </div> -->
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-firestore.js"></script>
     <script type="text/javascript" src="./js/global.js"></script>
-    <script type="text/javascript" src="./js/investments.js"></script>
+    <script type="text/javascript" src="./js/investments.jsx"></script>
 </body>
 
 
