--- a/investments.html
+++ b/investments.html
@@ -47,6 +47,9 @@
                 <h2>Portfolio</h2>
             </div>
             <div id="chart-container">
+                <div id="chart_div">
+
+                </div>
                 Chart container
             </div>
         </div>
@@ -56,6 +59,7 @@
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-firestore.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="./js/global.js"></script>
     <script type="text/javascript" src="./js/investments.jsx"></script>
 </body>
