--- a/investments.html
+++ b/investments.html
@@ -43,14 +43,21 @@
 
         </div>
         <div id="portfolio-container">
-            <div id="portfolio-list-container">
-                <h2>Portfolio</h2>
+            <div class="portfolio-sub-container" id="portfolio-to-date-info-container">
+                <h2 id="portfolio-total-value">$3240</h2>
+                <h3 id="portfolio-percent-change">+3%</h3>
             </div>
-            <div id="chart-container">
-                <div id="chart_div">
-
+            <div class="portfolio-sub-container flex" id="portfolio-makeup-info-container">
+                <div id="portfolio-list-container">
+                    <h2>Portfolio</h2>
                 </div>
-                Chart container
+                <hr class="portfolio-vertical-divider">
+                <div class="portfolio-summary-container">
+                    <h2>Portfolio Summary</h2>
+                    <div id="portfolio-pie-wrapper">
+                        <div id="portfolio-pie-div"></div>
+                    </div>
+                </div>
             </div>
         </div>
 
