--- a/checkers.html
+++ b/checkers.html
@@ -27,6 +27,36 @@
             <button class="button-2" id="create-checkers-game" onclick="handleCreateNewGame()">Create Game</button>
             <button class="button-2" id="join-checkers-game" onclick="handleJoinGame()">Join Game</button>
         </div>
+        <div id="checkers-game-container" class="flex">
+            <div id="secondary-player-info" class="checkers-game-player-info-container flex-column">
+                <span class="player-stop-watch flex">
+                    <span>5</span>
+                    <span>:</span>
+                    <span>30</span>
+                </span>
+                <span class="pieces-captured-container">
+                    <span>Pieces Captured</span>
+                    <span>0</span>
+                </span>
+            </div>
+            <div class="game-info-player-turn-container flex">
+                <div class="checker primary-checker">
+                </div>
+            </div>
+            <div id="checkers-board-container">
+            </div>
+            <div id="primary-player-info" class="checkers-game-player-info-container flex-column">
+                <span class="player-stop-watch flex">
+                    <span>5</span>
+                    <span>:</span>
+                    <span>30</span>
+                </span>
+                <span class="pieces-captured-container">
+                    <span>Pieces Captured</span>
+                    <span>0</span>
+                </span>
+            </div>
+        </div>
 
 
 
