checkers updates still broken

--- a/checkers.html
+++ b/checkers.html
@@ -30,11 +30,12 @@
             </form>
             <button class="button-2" id="create-checkers-game" onclick="handleCreateNewGame()">Create Game</button>
             <button class="button-2" id="join-checkers-game" onclick="handleJoinGame()">Join Game</button>
+            <button class="button-2" onclick="deleteAllStoredGames()">Delete All</button>
         </div>
         <div id="checkers-game-container" class="flex">
 
         </div>
-
+        <button class="button-2" onclick="printState()"> Check State</button>
 
 
 
