--- a/investments.html
+++ b/investments.html
@@ -44,54 +44,41 @@
         </div>
         <div id="portfolio-container">
             <div class="portfolio-sub-container flex-column" id="portfolio-info-container-parent-div">
-                <!-- <div class="portfolio-info-container-button-wrapper flex-end">
-                    <button class="selector-button" onclick="handleViewInfoContainer('summary')">Summary</button>
-                    <button class="selector-button"
-                        onclick="handleViewInfoContainer('performance')">Performance</button>
-                </div> -->
                 <h2 id="portfolio-info-container-title">Portfolio Summary</h2>
                 <div class="portfolio-info-container-view-window ">
+                    <!-- <div class="portfolio-info-container">
+                        <div class="portfolio-info-container-content">
+                            daily
+                        </div>
+                    </div>
                     <div class="portfolio-info-container" id="portfolio-summary-container">
-                        <!-- <h2>Portfolio Summary</h2> -->
                         <div class="portfolio-info-container-content flex" id="portfolio-pie-wrapper">
                             <div id="portfolio-pie-div"></div>
                         </div>
                     </div>
                     <div class="portfolio-info-container" id="portfolio-performance-container">
-                        <!-- <h2>Performance</h2> -->
                         <div class="portfolio-info-container-content" id="portfolio-performance-graph-wrapper">
                             <div id="portfolio-graph-div">
 
                             </div>
+                            All-time
                         </div>
-                    </div>
-
-                    <div class="portfolio-info-container">
-                        <!-- <h2>Title 1</h2> -->
+                    </div> -->
+                    <div class="portfolio-info-container" id="info1">
                         <div class="portfolio-info-container-content">
-                            Content 1
+                            1
                         </div>
                     </div>
-                    <div class="portfolio-info-container">
-                        <!-- <h2>Title 2</h2> -->
+                    <div class="portfolio-info-container" id="info2">
                         <div class="portfolio-info-container-content">
-                            Content 2
+                            2
                         </div>
                     </div>
-                    <div class="portfolio-info-container">
-                        <!-- <h2>Title 3</h2> -->
+                    <div class="portfolio-info-container" id="info3">
                         <div class="portfolio-info-container-content">
-                            Content 3
+                            3
                         </div>
                     </div>
-                    <div class="portfolio-info-container">
-                        <!-- <h2>Title 4</h2> -->
-                        <div class="portfolio-info-container-content">
-                            Content 4
-                        </div>
-                    </div>
-
-
 
 
 
